--- a/style.css
+++ b/style.css
@@ -368,6 +368,11 @@ a:hover {
     z-index: 2;
 }
 
+footer p{
+    font-size: 16px;
+    font-weight: bold;
+}
+
 @media (min-width: 768px) {
     .site-navigation {
         position: absolute;
