--- a/style.css
+++ b/style.css
@@ -369,8 +369,8 @@ a:hover {
 }
 
 footer p{
-    font-size: 1.5em;
-    font-weight: bold;
+    font-size: 1.2em;
+    font-weight:900;
 }
 
 @media (min-width: 768px) {
