--- a/style.css
+++ b/style.css
@@ -8,6 +8,15 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+footer p {
+    font-weight: bold;
+}
+
+.grey{
+    color: #333333;
+}
+
+
 strong
 {
     font-weight: inherit;
@@ -23,6 +32,7 @@ a:hover {
     text-decoration: none;
     cursor: pointer;
 }
+
 
 #page-loading-blocs-notifaction {
     position: fixed;
@@ -747,6 +757,10 @@ h4 {
 
 .white {
     color: #FFFFFF!important;
+}
+
+.black {
+    color: black!important;
 }
 
 .portfolio-thumb {
