--- a/style.css
+++ b/style.css
@@ -764,7 +764,8 @@ h4 {
 
 .portfolio-thumb {
     margin-bottom: 24px;
-    width: 100%;
+    width: 330px;
+    height: 330px;
 }
 
 .portfolio-row {
