--- a/style.css
+++ b/style.css
@@ -764,8 +764,8 @@ h4 {
 
 .portfolio-thumb {
     margin-bottom: 24px;
-    width: 270px;
-    height: 330px;
+    max-width: 300px;
+    max-height: 300px;
     background-size: cover;
 
 }
